{
  "version": 4,
  "terraform_version": "1.15.4",
  "serial": 21,
  "lineage": "cc18586a-1cfc-515f-4977-e51495e34d6a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09618f8ff17b3b3eb",
            "arn": "arn:aws:ec2:ap-southeast-1:275440672691:elastic-ip/eipalloc-09618f8ff17b3b3eb",
            "association_id": "eipassoc-028efded4ba22ce59",
            "domain": "vpc",
            "id": "eipalloc-09618f8ff17b3b3eb",
            "network_border_group": "ap-southeast-1",
            "network_interface": "eni-0f74989da98e27a0a",
            "private_dns": "ip-10-0-1-194.ap-southeast-1.compute.internal",
            "private_ip": "10.0.1.194",
            "public_dns": "ec2-3-0-79-91.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "3.0.79.91",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "banking-nat-eip"
            },
            "tags_all": {
              "Name": "banking-nat-eip"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:275440672691:internet-gateway/igw-01c4baa107a59f917",
            "id": "igw-01c4baa107a59f917",
            "owner_id": "275440672691",
            "tags": {
              "Name": "banking-igw"
            },
            "tags_all": {
              "Name": "banking-igw"
            },
            "vpc_id": "vpc-093c8096a5a89e557"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09618f8ff17b3b3eb",
            "association_id": "eipassoc-028efded4ba22ce59",
            "connectivity_type": "public",
            "id": "nat-0774ba33787aaf5ea",
            "network_interface_id": "eni-0f74989da98e27a0a",
            "private_ip": "10.0.1.194",
            "public_ip": "3.0.79.91",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0ee08711729cbc831",
            "tags": {
              "Name": "banking-nat-gateway"
            },
            "tags_all": {
              "Name": "banking-nat-gateway"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.igw",
            "aws_subnet.public_1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:275440672691:route-table/rtb-0c3d6f26bb153c379",
            "id": "rtb-0c3d6f26bb153c379",
            "owner_id": "275440672691",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "banking-database-rt"
            },
            "tags_all": {
              "Name": "banking-database-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-093c8096a5a89e557"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:275440672691:route-table/rtb-0aabc028ea8993ce4",
            "id": "rtb-0aabc028ea8993ce4",
            "owner_id": "275440672691",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0774ba33787aaf5ea",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "banking-private-rt"
            },
            "tags_all": {
              "Name": "banking-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-093c8096a5a89e557"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_subnet.public_1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:275440672691:route-table/rtb-0244af2ed24f3bb13",
            "id": "rtb-0244af2ed24f3bb13",
            "owner_id": "275440672691",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01c4baa107a59f917",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "banking-public-rt"
            },
            "tags_all": {
              "Name": "banking-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-093c8096a5a89e557"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_app_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f0e8054e8794d862",
            "route_table_id": "rtb-0aabc028ea8993ce4",
            "subnet_id": "subnet-084bbd6931f84981b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private_app_1",
            "aws_subnet.public_1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_app_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0927d06d01d0ad2d2",
            "route_table_id": "rtb-0aabc028ea8993ce4",
            "subnet_id": "subnet-0813cdc9c460da65a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private_app_2",
            "aws_subnet.public_1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_db_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f223f54f33a4125e",
            "route_table_id": "rtb-0c3d6f26bb153c379",
            "subnet_id": "subnet-0cb6f106c1e82d7af"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.database",
            "aws_subnet.private_db_1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_db_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04c586b71420b1a17",
            "route_table_id": "rtb-0c3d6f26bb153c379",
            "subnet_id": "subnet-0f7177612811388fc"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.database",
            "aws_subnet.private_db_2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-097a5cb1490ed19ad",
            "route_table_id": "rtb-0244af2ed24f3bb13",
            "subnet_id": "subnet-0ee08711729cbc831"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public_1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-056c926ca8e1752b8",
            "route_table_id": "rtb-0244af2ed24f3bb13",
            "subnet_id": "subnet-04451e734367feeda"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public_2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_app_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:275440672691:subnet/subnet-084bbd6931f84981b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-084bbd6931f84981b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "275440672691",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "banking-private-app-1"
            },
            "tags_all": {
              "Name": "banking-private-app-1"
            },
            "vpc_id": "vpc-093c8096a5a89e557"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_app_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:275440672691:subnet/subnet-0813cdc9c460da65a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0813cdc9c460da65a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "275440672691",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "banking-private-app-2"
            },
            "tags_all": {
              "Name": "banking-private-app-2"
            },
            "vpc_id": "vpc-093c8096a5a89e557"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_db_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:275440672691:subnet/subnet-0cb6f106c1e82d7af",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.21.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cb6f106c1e82d7af",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "275440672691",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "banking-private-db-1"
            },
            "tags_all": {
              "Name": "banking-private-db-1"
            },
            "vpc_id": "vpc-093c8096a5a89e557"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_db_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:275440672691:subnet/subnet-0f7177612811388fc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.22.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f7177612811388fc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "275440672691",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "banking-private-db-2"
            },
            "tags_all": {
              "Name": "banking-private-db-2"
            },
            "vpc_id": "vpc-093c8096a5a89e557"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:275440672691:subnet/subnet-0ee08711729cbc831",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ee08711729cbc831",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "275440672691",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "banking-public-web-1"
            },
            "tags_all": {
              "Name": "banking-public-web-1"
            },
            "vpc_id": "vpc-093c8096a5a89e557"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:275440672691:subnet/subnet-04451e734367feeda",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04451e734367feeda",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "275440672691",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "banking-public-web-2"
            },
            "tags_all": {
              "Name": "banking-public-web-2"
            },
            "vpc_id": "vpc-093c8096a5a89e557"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:275440672691:vpc/vpc-093c8096a5a89e557",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0e675ec2f2d4c089f",
            "default_route_table_id": "rtb-0bdd31178a0c3157f",
            "default_security_group_id": "sg-02db2fd60dbadec42",
            "dhcp_options_id": "dopt-06dd6ea43f62c9180",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-093c8096a5a89e557",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0bdd31178a0c3157f",
            "owner_id": "275440672691",
            "tags": {
              "Name": "smart-banking-vpc"
            },
            "tags_all": {
              "Name": "smart-banking-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}